--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
           mkdir -p _dist/output/
           echo '${{ secrets.GITHUB_TOKEN }}' > _dist/output/foo
       - name: upload release assets
-        uses: HarikrishnanBalagopal/upload-release-action@feat/draft
+        uses: HarikrishnanBalagopal/upload-release-action@v3
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ github.event.inputs.tag }}
