--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,9 +23,11 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - id: info
+        uses: konveyor/get-env-info@v1
       - uses: actions/setup-node@v1
         with:
-          node-version: "12"
+          node-version: ${{ steps.info.outputs.node_version }}
       - name: create release draft
         run: |
           npm install github-release-notes@v0.17.3 -g
@@ -33,6 +35,7 @@ jobs:
       - run: |
           mkdir -p _dist/output/
           echo '${{ secrets.GITHUB_TOKEN }}' > _dist/output/foo
+          node --version > _dist/output/bar
       - name: upload release assets
         uses: HarikrishnanBalagopal/upload-release-action@v3
         with:
