--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,7 +24,7 @@ jobs:
             const owner = "HarikrishnanBalagopal";
             const repo = "${{ matrix.repo }}";
             const tag = "${{ github.event.inputs.tag }}";
-            const response = await octokit.repos.listReleases({ owner, repo });
+            const response = await github.repos.listReleases({ owner, repo });
             for (const release of response.data) {
               core.debug(release.tag_name);
               if (release.tag_name === tag) {
