feat: add pr labeller
Signed-off-by: Harikrishnan Balagopal <harikrishmenon@gmail.com>

--- a/.github/workflows/prlabel.yml
+++ b/.github/workflows/prlabel.yml
@@ -16,7 +16,7 @@ jobs:
           script: |
             const labels = ['bug'];
             const resp = await github.issues.addLabels({
-              ..context.repo,
+              ...context.repo,
               issue_number: github.event.number,
               labels
             });
