--- a/.github/workflows/labelpr.yml
+++ b/.github/workflows/labelpr.yml
@@ -2,7 +2,7 @@ name: Label PRs
 
 on:
   pull_request_target:
-    types: [opened, edited]
+    types: [opened, edited, reopened]
 
 jobs:
   label_pr:
