--- a/.github/workflows/labelpr.yml
+++ b/.github/workflows/labelpr.yml
@@ -12,11 +12,15 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            core.info('github   !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!')
-            core.info(`${JSON.stringify(github)}`)
-            core.info('context  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!')
-            core.info(`${JSON.stringify(context)}`)
+            // core.info('github   !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!')
+            // core.info(`${JSON.stringify(github)}`)
+            // core.info('context  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!')
+            // core.info(`${JSON.stringify(context)}`)
 
-            await github.issues.createComment({ ...context.repo, issue_number: context.payload.number, body: "Thanks for opening this pull request!" });
+            let resp = await github.issues.createComment({ ...context.repo, issue_number: context.payload.number, body: "Thanks for opening this pull request!" });
+            core.info('first   !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!')
+            core.info(`${JSON.stringify(resp)}`)
             const labels = ['enhancement'];
-            await github.issues.addLabels({ ...context.repo, issue_number: context.payload.number, labels });
+            resp = await github.issues.addLabels({ ...context.repo, issue_number: context.payload.number, labels });
+            core.info('second   !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!')
+            core.info(`${JSON.stringify(resp)}`)
