fix: change event type again
Signed-off-by: Harikrishnan Balagopal <harikrishmenon@gmail.com>

--- a/.github/workflows/labelpr.yml
+++ b/.github/workflows/labelpr.yml
@@ -20,7 +20,29 @@ jobs:
             let resp = await github.issues.createComment({ ...context.repo, issue_number: context.payload.number, body: "Thanks for opening this pull request!" });
             core.info('first   !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!')
             core.info(`${JSON.stringify(resp)}`)
-            const labels = ['enhancement'];
+            if(resp.status > 399)core.setFailed(`Failed to create the comment. Status:${resp.status}`);
+
+            const title = context.payload.pull_request.title;
+            const results = /^(\w+)(\(\w+\))?!?:/.exec(title);
+            if (results === null) {core.setFailed(`The title ${title} does not follow conventional commits spec.`)}
+
+            const pr_type = results[1];
+            core.debug(`pr_type:${pr_type}`);
+            let label = '';
+            switch(pr_type) {
+              case 'fix':
+              case 'refactor':
+              case 'chore':
+              case 'docs':
+                label = 'fix'; break;
+              case 'feat':
+                label = 'enhancement'; break;
+            }
+            core.debug(`label: ${label}`);
+            if(label === '')core.setFailed(`Unknown pull request type ${pr_type}`);
+
+            const labels = [label];
             resp = await github.issues.addLabels({ ...context.repo, issue_number: context.payload.number, labels });
             core.info('second   !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!')
             core.info(`${JSON.stringify(resp)}`)
+            if(resp.status > 399)core.setFailed(`Failed to set the labels ${labels} Status:${resp.status}`);
