--- a/.github/workflows/labelpr.yml
+++ b/.github/workflows/labelpr.yml
@@ -12,19 +12,15 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            // core.info('github   !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!')
-            // core.info(`${JSON.stringify(github)}`)
-            // core.info('context  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!')
-            // core.info(`${JSON.stringify(context)}`)
+            const pr_welcome_msg = `Thanks for opening this pull request!`;
 
-            let resp = await github.issues.createComment({ ...context.repo, issue_number: context.payload.number, body: "Thanks for opening this pull request!" });
-            core.info('first   !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!')
-            core.info(`${JSON.stringify(resp)}`)
-            if (resp.status > 399) core.setFailed(`Failed to create the comment. Status:${resp.status}`);
+            if(context.payload.pull_request.comments === 0) {
+              await github.issues.createComment({ ...context.repo, issue_number: context.payload.number, body: pr_welcome_msg});
+            }
 
             const title = context.payload.pull_request.title;
             const results = /^(\w+)(\(\w+\))?!?:/.exec(title);
-            if (results === null) core.setFailed(`The title ${title} does not follow conventional commits spec.`);
+            if (results === null) core.setFailed(`The title ${title} does not follow conventional commits spec: https://www.conventionalcommits.org/en/v1.0.0/#summary`);
 
             const pr_type = results[1];
             core.debug(`pr_type:${pr_type}`);
@@ -42,7 +38,4 @@ jobs:
             if(label === '')core.setFailed(`Unknown pull request type ${pr_type}`);
 
             const labels = [label];
-            resp = await github.issues.addLabels({ ...context.repo, issue_number: context.payload.number, labels });
-            core.info('second   !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!')
-            core.info(`${JSON.stringify(resp)}`)
-            if (resp.status > 399) core.setFailed(`Failed to set the labels ${labels} Status:${resp.status}`);
+            await github.issues.addLabels({ ...context.repo, issue_number: context.payload.number, labels });
