--- a/.github/workflows/labelpr.yml
+++ b/.github/workflows/labelpr.yml
@@ -12,11 +12,9 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            // core.info(`context.payload.pull_request: ${JSON.stringify(context.payload.pull_request)}`);
-            // core.info(`context: ${JSON.stringify(context)}`);
-
             const pr_welcome_msg = `Thanks for making a pull request! 😃`;
-            const to_remove = ['fix', 'enhancement'];
+            // https://github.com/commitizen/conventional-commit-types
+            const valid_pr_types = ['feat', 'fix', 'docs', 'style', 'refactor', 'perf', 'test', 'build', 'ci', 'chore', 'revert'];
 
             if(context.payload.pull_request.comments === 0) {
               await github.issues.createComment({ ...context.repo, issue_number: context.payload.number, body: pr_welcome_msg});
@@ -27,21 +25,11 @@ jobs:
             if (results === null) core.setFailed(`The title does not follow conventional commits spec: https://www.conventionalcommits.org/en/v1.0.0/#summary Title: ${title}`);
 
             const pr_type = results[1];
-            core.info(`pr_type:${pr_type}`);
-            let label = '';
-            switch(pr_type) {
-              case 'fix':
-              case 'refactor':
-              case 'chore':
-              case 'docs':
-                label = 'fix'; break;
-              case 'feat':
-                label = 'enhancement'; break;
-            }
-            core.info(`label: ${label}`);
-            if(label === '')core.setFailed(`Unknown pull request type ${pr_type}`);
+            core.info(`pr_type: ${pr_type}`);
+
+            if(!valid_pr_types.includes(pr_type))core.setFailed(`Unknown pull request type: ${pr_type}`);
 
             const labels = context.payload.pull_request.labels;
-            const new_labels = labels.filter(label => !to_remove.includes(label.name)); // remove all labels listed in to_remove
-            new_labels.push({name: label});
+            const new_labels = labels.filter(label => !valid_pr_types.includes(label.name)); // keep all labels that are not in valid_pr_types
+            new_labels.push({name: pr_type});
             await github.issues.update({ ...context.repo, issue_number: context.payload.number, labels: new_labels });
