--- a/.github/workflows/foo.yml
+++ b/.github/workflows/foo.yml
@@ -33,6 +33,7 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
+            core.setFailed('some reason')
             console.log('console.log', context.repo)
             core.info(`core.info, ${JSON.stringify(context.repo)}`)
             core.debug(`core.debug ${JSON.stringify(context.repo)}`)
