feat: print stuff
Signed-off-by: Harikrishnan Balagopal <harikrishmenon@gmail.com>

--- a/.github/workflows/what.yml
+++ b/.github/workflows/what.yml
@@ -9,3 +9,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: ls -a
+      - uses: actions/github-script@v3
+        with:
+          github-token: ${{ secrets.MOVE2KUBE_PATOKEN }}
+          script: |
+            core.info(`github: ${JSON.stringify(github)}`)
+            core.info(`context: ${JSON.stringify(context)}`)
