--- a/.github/workflows/bar.yml
+++ b/.github/workflows/bar.yml
@@ -13,3 +13,11 @@ jobs:
     steps:
       - run: echo ${{ github.ref }}
       - run: echo ${{ github.ref == 'refs/heads/main' }}
+      - uses: actions/github-script@v3
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            console.log('github', github)
+            core.info(`github ${github}`)
+            console.log('context', context)
+            core.info(`context ${context}`)
