--- a/.github/workflows/bar.yml
+++ b/.github/workflows/bar.yml
@@ -1,4 +1,4 @@
-name: PR Build
+name: this is the thing
 
 on:
   pull_request:
@@ -7,8 +7,8 @@ on:
       - "release-*"
 
 jobs:
-  build:
-    name: Build and test
+  this_one:
+    name: this one
     runs-on: ubuntu-latest
     steps:
       - run: echo ${{ github.ref }}
@@ -17,8 +17,8 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const resp = await octokit.request('GET /repos/{owner}/{repo}/pulls/{pull_number}', {owner, repo, pull_number})
-            core.setOutput('branch', resp.data.base.ref)
+            const resp = await github.request('GET /repos/{owner}/{repo}/pulls/{pull_number}', {owner, repo, pull_number});
+            core.setOutput('branch', resp.data.base.ref);
       - if: ${{ steps.branch_info.outputs.branch == 'main' }}
         run: echo 'pr made on main branch'
       - if: ${{ steps.branch_info.outputs.branch != 'main' }}
