--- a/.github/workflows/bar.yml
+++ b/.github/workflows/bar.yml
@@ -1,22 +1,12 @@
-name: this is the thing
+name: this_one
 
 on:
   pull_request:
+    branches: [main]
 
 jobs:
   this_one:
-    name: this one
+    name: this_one
     runs-on: ubuntu-latest
     steps:
-      - run: echo ${{ github.ref }}
-      - id: branch_info
-        uses: actions/github-script@v3
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const resp = await github.request('GET /repos/{owner}/{repo}/pulls/{pull_number}', {...context.repo, pull_number:context.payload.number});
-            core.setOutput('branch', resp.data.base.ref);
-      - if: ${{ steps.branch_info.outputs.branch == 'main' }}
-        run: echo 'pr made on main branch'
-      - if: ${{ steps.branch_info.outputs.branch != 'main' }}
-        run: echo 'pr made on another branch. branch ${{ steps.branch_info.outputs.branch }}'
+      - run: echo '${{ github.ref }}'
