--- a/.github/workflows/bar.yml
+++ b/.github/workflows/bar.yml
@@ -2,7 +2,9 @@ name: this_one
 
 on:
   pull_request:
-    branches: [main]
+    branches:
+      - "main"
+      - "release-*"
 
 jobs:
   this_one:
