--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -6,7 +6,7 @@ on:
       json:
         description: the json data
         required: true
-        default: '{"run_id":"${{ github.run_id }}"}'
+        default: '{"some":"thing"}'
 
 jobs:
   foobar:
@@ -15,6 +15,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: yoyo
+      - run: echo 'run_id ${{ github.run_id }}' > foobar.json
       - run: echo 'input ${{ github.event.inputs.json }}' > foobar.json
       - uses: EndBug/add-and-commit@v6
         with:
