--- a/.github/workflows/bar.yml
+++ b/.github/workflows/bar.yml
@@ -1,25 +1,16 @@
 name: this_one
 
-on:
-  pull_request:
-    branches:
-      - "main"
-      - "release-*"
+on: workflow_dispatch
 
 jobs:
   this_one:
     name: this_one
     runs-on: ubuntu-latest
     steps:
-      - run: echo ${{ github.ref }}
-      - id: branch_info
-        uses: actions/github-script@v3
+      - run: echo '${{ github.ref }}'
+      - uses: actions/github-script@v3
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const resp = await github.request('GET /repos/{owner}/{repo}/pulls/{pull_number}', {...context.repo, pull_number:context.payload.number});
-            core.setOutput('branch', resp.data.base.ref);
-      - if: ${{ steps.branch_info.outputs.branch == 'main' }}
-        run: echo 'pr made on main branch'
-      - if: ${{ steps.branch_info.outputs.branch != 'main' }}
-        run: echo 'pr made on another branch. branch ${{ steps.branch_info.outputs.branch }}'
+            console.log('context.ref', context.ref)
+            console.log('context', context)
