--- a/.github/workflows/newact.yml
+++ b/.github/workflows/newact.yml
@@ -56,9 +56,9 @@ jobs:
             const run_id = workflow_runs[0].id;
             for(let t = 0; t < timeout; t += time_between_polls) {
               const resp = await github.actions.getWorkflowRun({owner, repo, run_id});
-              console.log(resp);
-              if(resp.conclusion !== null) {
-                if(resp.conclusion === 'success' && resp.status === 'completed') {
+              core.info('still waiting. got response:', resp);
+              if(resp.data.conclusion !== null) {
+                if(resp.data.conclusion === 'success' && resp.data.status === 'completed') {
                   return core.info('Workflow succeeded');
                 }
                 return core.setFailed('Workflow failed');
