--- a/.github/workflows/testgren.yml
+++ b/.github/workflows/testgren.yml
@@ -32,6 +32,7 @@ jobs:
         with:
           node-version: "12"
       - name: create release draft
+        shell: bash
         run: |
           npm install github-release-notes@v0.17.3 -g
           options=()
