--- a/.github/workflows/testgren.yml
+++ b/.github/workflows/testgren.yml
@@ -84,3 +84,24 @@ jobs:
             options+=('--tags' '${{ github.event.inputs.tag }}')
           fi
           gren release --draft "${options[@]}" --username=${{ github.repository_owner }} --repo=${{ github.event.repository.name }} --token=${{ secrets.GITHUB_TOKEN }}
+
+  update_draft_title:
+    needs: [create_release_draft]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/github-script@v3
+        with:
+          github-token: ${{ secrets.MOVE2KUBE_PATOKEN }}
+          script: |
+            const tag = '${{ github.event.inputs.tag }}';
+            const response = await github.repos.listReleases({ ...context.repo });
+            const drafts = response.data.filter(release => release.draft && release.tag_name === tag);
+            if(drafts.length !== 1) {
+              return core.setFailed(`Expected to find exactly one draft release with the tag ${tag}. Found: ${drafts.length}`);
+            }
+            const draft = drafts[0];
+            if(!draft.name.startsWith('[WIP] ')) {
+              return core.setFailed(`Expected the draft name to begin with [WIP]. Found: ${draft.name}`);
+            }
+            const new_name = draft.name.replace(/^\[WIP\] /, '');
+            await github.repos.updateRelease({...context.repo, release_id: draft.id, name: new_name});
