--- a/.github/workflows/test-create-release-draft.yml
+++ b/.github/workflows/test-create-release-draft.yml
@@ -22,4 +22,4 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ github.event.inputs.tag }}
           prev_tag: ${{ github.event.inputs.prev_tag }}
-          config: .grenrc.js
+          config: ./.grenrc.js
