--- a/.github/workflows/test-create-release-draft.yml
+++ b/.github/workflows/test-create-release-draft.yml
@@ -17,6 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - run: ls -a
       - uses: HarikrishnanBalagopal/create-release-draft-1@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
