--- a/.github/workflows/test-create-release-draft.yml
+++ b/.github/workflows/test-create-release-draft.yml
@@ -17,8 +17,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - run: pwd
       - run: ls -a
-      - uses: HarikrishnanBalagopal/create-release-draft-1@v1
+      - uses: HarikrishnanBalagopal/create-release-draft-1@vfix
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ github.event.inputs.tag }}
