--- a/.github/workflows/test-create-release-draft.yml
+++ b/.github/workflows/test-create-release-draft.yml
@@ -19,9 +19,9 @@ jobs:
       - uses: actions/checkout@v2
       - run: pwd
       - run: ls -a
-      - uses: HarikrishnanBalagopal/create-release-draft-1@vfix
+      - uses: HarikrishnanBalagopal/create-release-draft-1@vfix1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ github.event.inputs.tag }}
           prev_tag: ${{ github.event.inputs.prev_tag }}
-          config: ./.grenrc.js
+          config: .grenrc.js
