--- a/.github/workflows/test-create-release-draft.yml
+++ b/.github/workflows/test-create-release-draft.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: pwd
       - run: ls -a
-      - uses: HarikrishnanBalagopal/create-release-draft-1@vfix1
+      - uses: HarikrishnanBalagopal/create-release-draft-1@vfoo1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ github.event.inputs.tag }}
