fixup! test: xcode errors
Signed-off-by: Harikrishnan Balagopal <harikrishmenon@gmail.com>

--- a/.github/workflows/test-go.yml
+++ b/.github/workflows/test-go.yml
@@ -16,5 +16,5 @@ jobs:
           go-version: ${{ steps.info.outputs.go_version }}
       - run: go build
       - run: ls -a
-      - run: yothere
+      - run: ./yothere
       - run: echo "done"
