--- a/.github/workflows/test-go.yml
+++ b/.github/workflows/test-go.yml
@@ -17,9 +17,10 @@ jobs:
       - run: go build
       - run: ls -a
       - run: ./yothere
-      - run: echo "done"
 
       - run: go get github.com/mitchellh/gox@v1.0.1
       - run: |
           CGO_ENABLED=0 gox -parallel=3 -output="myoutput/{{.OS}}-{{.Arch}}/yothere" -osarch='darwin/amd64 linux/amd64' .
       - run: ls -R
+      - run: ./myoutput/darwin-amd64/yothere
+      - run: echo "done"
